--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   db:
     image: postgres:16
-    container_name: askvox_db
+    container_name: askvox_postgres_container
     environment:
-      POSTGRES_USER: askvox
+      POSTGRES_USER: askvox_user
       POSTGRES_PASSWORD: askvox_pw
-      POSTGRES_DB: askvox
+      POSTGRES_DB: askvox_db
     ports:
-      - "5432:5433"
+      - "5433:5432"
     volumes:
       - askvox_pgdata:/var/lib/postgresql/data
 
