--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -5,7 +5,7 @@ on:
     branches: [main, Development-Branch-]
   pull_request:
     branches: [main, Development-Branch-]
-
+ 
 jobs:
   lint:
     name: Lint & Format Check
@@ -38,25 +38,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
 
-    services:
-      postgres:
-        # closer to Supabase (pgvector available)
-        image: pgvector/pgvector:pg16
-        env:
-          POSTGRES_USER: askvox_user
-          POSTGRES_PASSWORD: askvox_pw
-          POSTGRES_DB: askvox_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U askvox_user -d askvox_db -h 127.0.0.1"
-          --health-interval 5s
-          --health-timeout 5s
-          --health-retries 20
-
     env:
-      DATABASE_URL: postgresql+asyncpg://askvox_user:askvox_pw@127.0.0.1:5432/askvox_db
-      DATABASE_URL_SYNC: postgresql+psycopg://askvox_user:askvox_pw@127.0.0.1:5432/askvox_db
+      # When using docker compose the DB is reachable via the mapped host port.
+      # Compose mapping in backend/docker-compose.yml is currently "5433:5432".
+      DATABASE_URL: postgresql+asyncpg://askvox_user:askvox_pw@127.0.0.1:5433/askvox_db
+      DATABASE_URL_SYNC: postgresql+psycopg://askvox_user:askvox_pw@127.0.0.1:5433/askvox_db
       PYTHONPATH: ${{ github.workspace }}/backend
 
     steps:
@@ -70,18 +56,16 @@ jobs:
           cache: "pip"
           cache-dependency-path: backend/requirements.txt
 
-      - name: Install requirements
+      - name: Set up Docker Compose
         run: |
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
-          # Safety: ensure psycopg exists for DATABASE_URL_SYNC and your wait script
-          python -c "import psycopg" 2>/dev/null || pip install "psycopg[binary]"
+          cd backend
+          docker compose -f docker-compose.yml up -d --build
 
-      - name: Wait for Postgres
+      - name: Wait for Postgres (compose)
         run: |
-          # Use pg_isready to wait for the postgres service
+          cd backend
           for i in $(seq 1 30); do
-            if pg_isready -h 127.0.0.1 -p 5432 -U askvox_user -d askvox_db >/dev/null 2>&1; then
+            if docker compose exec -T db pg_isready -U askvox_user -d askvox_db >/dev/null 2>&1; then
               echo "Postgres is available"
               exit 0
             fi
@@ -89,17 +73,24 @@ jobs:
             sleep 2
           done
           echo "Timed out waiting for Postgres"
+          docker compose logs db || true
           exit 1
 
-      - name: Run Alembic migrations
-        working-directory: backend
+      - name: Run Alembic migrations (inside api container)
         run: |
-          alembic -c alembic.ini upgrade head
+          cd backend
+          docker compose exec -T api alembic -c alembic.ini upgrade head
 
-      - name: Run tests
-        working-directory: backend
+      - name: Run tests (inside api container)
         run: |
-          pytest .\tests\system\test_system_endpoints.py 
+          cd backend
+          docker compose exec -T api pytest ./tests/system/test_system_endpoints.py -q
+
+      - name: Tear down compose
+        if: always()
+        run: |
+          cd backend
+          docker compose down --volumes --remove-orphans
 
       - name: Upload pytest cache (optional)
         if: always()
