--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -47,7 +47,8 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Upload artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v1
+        # use v2 which avoids deprecated internal dependency on actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ${{ env.BUILD_DIR }}
 
