--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,9 +2,9 @@ name: Frontend CI/CD
 
 on:
   push:
-     branches:  [main, Development-Branch-]
+     #branches:  [main, Development-Branch-]
   pull_request:
-   branches:  [main, Development-Branch-]
+   #branches:  [main, Development-Branch-]
  
 
 jobs:
@@ -30,7 +30,15 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          # Use `npm ci` when a lockfile exists for reproducible installs; otherwise fall back to `npm install`.
+          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
+            echo "Lockfile found — running npm ci"
+            npm ci
+          else
+            echo "No lockfile found — running npm install"
+            npm install
+          fi
 
       - name: Build
         run: npm run build
