Integration fix Backend + frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,9 @@ SECRET_KEY=change_me_to_a_long_random_string
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_DAYS=7
+
+
+SEALION_API_KEY=sk-wTIFyQXoNe3RuDw-fO2LZw
+SEALION_BASE_URL=https://api.sea-lion.ai/v1
+SEALION_MODEL=aisingapore/Gemma-SEA-LION-v4-27B-IT
+ASSEMBLYAI_API_KEY=773bacf539e74a5591c9c02cdb9759e5
