[BACKEND] : Push llama model to cloud run

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,8 +5,18 @@
 
 
 # Supabase local DB (use the port supabase shows, usually 54322)
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@127.0.0.1:54322/postgres
-DATABASE_URL_SYNC=postgresql+psycopg://postgres:postgres@127.0.0.1:54322/postgres
+#DATABASE_URL=postgresql+asyncpg://postgres:postgres@127.0.0.1:54322/postgres
+#DATABASE_URL_SYNC=postgresql+psycopg://postgres:postgres@127.0.0.1:54322/postgres
+
+
+
+# Supabase CLOUD DB
+# async URL for your app (SQLAlchemy async engine)
+DATABASE_URL=postgresql+asyncpg://postgres.dtyrsdyyocpnvanhztdl:askvox_password_db@aws-1-ap-south-1.pooler.supabase.com:5432/postgres?sslmode=require
+
+# sync URL for Alembic migrations (psycopg)
+DATABASE_URL_SYNC=postgresql+psycopg://postgres.dtyrsdyyocpnvanhztdl:askvox_password_db@aws-1-ap-south-1.pooler.supabase.com:5432/postgres?sslmode=require
+
 
 
 CORS_ORIGINS=http://localhost:5173
@@ -17,8 +27,12 @@ ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
 
+
+
 SEALION_API_KEY=sk-wTIFyQXoNe3RuDw-fO2LZw
 SEALION_BASE_URL=https://api.sea-lion.ai/v1
 SEALION_MODEL=aisingapore/Gemma-SEA-LION-v4-27B-IT
 ASSEMBLYAI_API_KEY=773bacf539e74a5591c9c02cdb9759e5
 GOOGLE_SST_API_KEY=AIzaSyBuExtbVkYF6dJKH8VxcqSxmsLDDx1VVO8
+
+LLAMA_CLOUDRUN_URL=https://askvox-llama-cpu-810837955962.asia-southeast1.run.app/chat
