--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-duckduckgo-search
+duckduckgo-search>=6.3.5
 alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
@@ -15,7 +15,6 @@ charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 cryptography==46.0.3
-ddgs==9.10.0
 deprecation==2.1.0
 diskcache==5.6.3
 distro==1.9.0
