--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -32,9 +32,13 @@ fake-useragent==2.2.0
 duckduckgo-search>=6.3.5
 
 # Google Generative AI
-google-generativeai==0.9.0  # or latest compatible
-google-auth==2.47.0
+google-ai-generativelanguage==0.6.15
 google-api-core==2.28.1
+google-api-python-client==2.188.0
+google-auth==2.47.0
+google-auth-httplib2==0.3.0
+google-genai==1.58.0
+googleapis-common-protos==1.72.0
 protobuf==4.25.8
 
 # Config & validation
