--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -1,36 +1,3 @@
-# Core web framework
-fastapi==0.122.0
-uvicorn==0.38.0
-starlette==0.50.0
-
-# Async & HTTP
-anyio==4.11.0
-httpx==0.28.1
-
-# Database
-SQLAlchemy==2.0.44
-alembic==1.17.2
-asyncpg==0.31.0
-psycopg[binary]==3.2.13
-
-# Auth & Security
-passlib==1.7.4
-bcrypt==4.0.1
-python-jose==3.5.0
-email-validator==2.3.0
-
-# Supabase
-supabase==2.27.1
-
-# Web utilities
-requests==2.32.5
-beautifulsoup4==4.14.3
-feedparser==6.0.12
-fake-useragent==2.2.0
-
-# Search
-duckduckgo-search>=6.3.5
-
 # Google Generative AI
 google-ai-generativelanguage==0.6.15
 google-api-core==2.28.1
@@ -41,12 +8,80 @@ google-genai==1.58.0
 googleapis-common-protos==1.72.0
 protobuf==4.25.8
 
-# Config & validation
+duckduckgo-search>=6.3.5
+alembic==1.17.2
+annotated-types==0.7.0
+anyio==4.11.0
+asyncpg==0.31.0
+bcrypt==4.0.1
+beautifulsoup4==4.14.3
+cachetools==6.2.2
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+cryptography==46.0.3
+deprecation==2.1.0
+distro==1.9.0
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
+fake-useragent==2.2.0
+fastapi==0.122.0
+feedparser==6.0.12
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.31.1
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+Jinja2==3.1.6
+lxml==6.0.2
+Mako==1.3.10
+MarkupSafe==3.0.3
+packaging==25.0
+passlib==1.7.4
+postgrest==2.27.1
+proto-plus==1.26.1
+psycopg==3.2.13
+psycopg-binary==3.2.13
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
 pydantic==2.12.5
 pydantic-settings==2.12.0
+pydantic_core==2.41.5
+PyJWT==2.10.1
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
-
-# Utilities
-cachetools==6.2.2
-diskcache==5.6.3
+python-jose==3.5.0
 python-multipart==0.0.20
+PyYAML==6.0.3
+realtime==2.27.1
+regex==2025.11.3
+requests==2.32.5
+rich==14.2.0
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8.1
+SQLAlchemy==2.0.44
+sse-starlette==3.0.3
+starlette==0.50.0
+starlette-context==0.3.6
+storage3==2.27.1
+stripe==14.1.0
+supabase==2.27.1
+supabase-auth==2.27.1
+supabase-functions==2.27.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.6.1
+uvicorn==0.38.0
+watchfiles==1.1.1
+websockets==15.0.1
+wheel==0.45.1
+
+numpy==2.3.5
