--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.1",
     "lucide-react": "^0.556.0",
+    "pdfjs-dist": "^5.4.530",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
