--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,10 @@
-FROM python:3.12-slim
+FROM python:3.11-slim
 
 WORKDIR /app
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+COPY backend/requirements-render.txt /app/requirements-render.txt
+RUN pip install --no-cache-dir -r /app/requirements-render.txt
 
-COPY requirements-render.txt /app/requirements-render.txt
-RUN pip install --no-cache-dir --upgrade pip && pip install --no-cache-dir -r /app/requirements-render.txt
+COPY backend /app
 
-COPY . /app
-
-# Make entrypoint executable
-#RUN chmod +x /app/entrypoint.sh
-
-EXPOSE 8080
-
- # Run
-ENV PYTHONUNBUFFERED=1
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
