--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,21 @@
 # Stage 1: Build frontend
 FROM node:20-alpine as build
-
 WORKDIR /app
 
-# Install dependencies first for better caching
-COPY package.json package-lock.json* ./
+# Copy package files from the frontend folder (because build context is repo root)
+COPY frontend/package.json frontend/package-lock.json* ./
 RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
-# Copy rest of the application
-COPY . .
+# Copy the rest of the frontend app
+COPY frontend/ ./
 
 # Build the app
 RUN npm run build
 
 # Stage 2: Serve with nginx
 FROM nginx:1.27-alpine
-
-# Remove default nginx files
 RUN rm -rf /usr/share/nginx/html/*
-
-# Copy built files from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy custom nginx config if you have one
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
-
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
