--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,33 @@
-# Stage 1: Build
-FROM node:20-bookworm-slim AS build
+# Stage 1: Build the app
+FROM node:20-bookworm-slim as build
+
 WORKDIR /app
 
-# Upgrade npm to avoid optional-deps bug (rollup native package)
-RUN npm i -g npm@11.8.0
-
-# Install deps first (better caching)
+# Copy package files
 COPY frontend/package.json frontend/package-lock.json* ./
-RUN npm install --include=optional
 
-# Copy source + build
+# Install dependencies
+RUN npm install
+
+# Copy source code
 COPY frontend/ ./
+
+# Build the app
 RUN npm run build
 
-# Stage 2: Serve static with nginx
+# Stage 2: Serve with nginx
 FROM nginx:1.27-alpine
+
+# Install brotli module for better compression
+RUN apk add --no-cache nginx-mod-http-brotli
+
+# Copy custom nginx config (FIXES SPA routing + adds compression)
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Clear default nginx files
 RUN rm -rf /usr/share/nginx/html/*
+
+# Copy built app
 COPY --from=build /app/dist /usr/share/nginx/html
 
 EXPOSE 80
