--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -4,6 +4,7 @@ google-api-core==2.28.1
 google-api-python-client==2.188.0
 google-auth==2.47.0
 google-auth-httplib2==0.3.0
+google-cloud-language>=2.11.0
 google-genai==1.58.0
 googleapis-common-protos==1.72.0
 protobuf==4.25.8
