update gitignore for sports and weather api

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 frontend/.env
-frontend/.env
-frontend/.env
-/frontend
+/frontend/.env.*
+
+# Track the frontend code. If you want to ignore only build outputs, do that explicitly.
+!/frontend/
 
 .env
 backend/askvox-ml-87ab4868b284.json
