--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,23 @@
+# Dockerfile
 FROM python:3.11-slim
 
 WORKDIR /app
 
 # Tools for downloading/extracting the Vosk model
 RUN apt-get update \
-	&& apt-get install -y --no-install-recommends curl unzip \
-	&& rm -rf /var/lib/apt/lists/*
+    && apt-get install -y --no-install-recommends curl unzip \
+    && rm -rf /var/lib/apt/lists/*
+
+# Update pip before installing requirements
+RUN pip install --upgrade pip
+
+# Install setuptools explicitly
+RUN pip install --no-cache-dir setuptools
 
 ARG VOSK_MODEL_ZIP_URL="https://alphacephei.com/vosk/models/vosk-model-small-en-us-0.15.zip"
 RUN curl -fsSL "$VOSK_MODEL_ZIP_URL" -o /tmp/vosk-model.zip \
-	&& unzip /tmp/vosk-model.zip -d /opt \
-	&& rm -f /tmp/vosk-model.zip
+    && unzip /tmp/vosk-model.zip -d /opt \
+    && rm -f /tmp/vosk-model.zip
 
 ENV VOSK_MODEL_PATH=/opt/vosk-model-small-en-us-0.15
 
