--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -132,7 +132,7 @@ python-multipart==0.0.20
 numpy==2.3.5
 
 
-openai-whisper==20231117
+#openai-whisper==20231117
 
 # Wake word engine (offline keyword spotting)
 vosk==0.3.45
