--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,10 @@
-duckduckgo-search>=6.3.5
 alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 asyncpg==0.31.0
 bcrypt==4.0.1
-beautifulsoup4==4.14.3
 black==25.11.0
-brotli==1.2.0
 cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
@@ -15,69 +12,37 @@ charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 cryptography==46.0.3
-deprecation==2.1.0
 diskcache==5.6.3
-distro==1.9.0
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
-fake-useragent==2.2.0
 fastapi==0.122.0
-feedparser==6.0.12
 filelock==3.20.0
 fsspec==2025.12.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.28.1
-google-api-python-client==2.188.0
-google-auth==2.47.0
-google-auth-httplib2==0.3.0
-google-cloud-language>=2.11.0
-google-genai==1.58.0
-googleapis-common-protos==1.72.0
 greenlet==3.2.4
 grpcio==1.76.0
 grpcio-status==1.62.3
 h11==0.16.0
-h2==4.3.0
-hpack==4.1.0
 httpcore==1.0.9
-httplib2==0.31.1
 httptools==0.7.1
 httpx==0.28.1
 huggingface-hub==0.36.0
-hyperframe==6.1.0
 idna==3.11
 iniconfig==2.3.0
 Jinja2==3.1.6
-joblib==1.5.3
 llama_cpp_python==0.3.16
-llvmlite==0.46.0
-lxml==6.0.2
 Mako==1.3.10
-markdown-it-py==4.0.0
 MarkupSafe==3.0.3
-mdurl==0.1.2
-mmh3==5.2.0
-more-itertools==10.8.0
 mpmath==1.3.0
-multidict==6.7.0
 mypy_extensions==1.1.0
-networkx==3.6.1
-ninja==1.13.0
-numba==0.63.1
+netwgoogle-cloud-language>=2.11.0
+orkx==3.6.1
 numpy==2.3.5
-openai-whisper==20231117
-
-# Wake word engine (offline keyword spotting)
-vosk==0.3.45
 packaging==25.0
 passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.5.0
 pluggy==1.6.0
-postgrest==2.27.1
-primp==0.15.0
-propcache==0.4.1
 proto-plus==1.26.1
 protobuf==4.25.8
 psycopg==3.2.13
@@ -90,50 +55,26 @@ pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
-pyiceberg==0.10.0
-PyJWT==2.10.1
-pyparsing==3.3.1
-pyroaring==1.0.3
 pytest==9.0.1
 pytest-asyncio==1.3.0
-python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-jose==3.5.0
  
 PyYAML==6.0.3
-rapidfuzz==3.9.7
-realtime==2.27.1
 regex==2025.11.3
 requests==2.32.5
-rich==14.2.0
 rsa==4.9.1
 ruff==0.14.6
 safetensors==0.7.0
-scikit-learn==1.8.0
-scipy==1.17.0
 sentencepiece==0.2.1
-setuptools==80.9.0
-sgmllib3k==1.0.0
 six==1.17.0
 sniffio==1.3.1
-socksio==1.0.0
-sortedcontainers==2.4.0
-soupsieve==2.8.1
+
+# Wake word engine (offline keyword spotting)
+vosk==0.3.45
 SQLAlchemy==2.0.44
-sse-starlette==3.0.3
 starlette==0.50.0
-starlette-context==0.3.6
-storage3==2.27.1
-StrEnum==0.4.15
-strictyaml==1.7.3
-stripe==14.1.0
-supabase==2.27.1
-supabase-auth==2.27.1
-supabase-functions==2.27.1
 sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tiktoken==0.12.0
 tokenizers==0.22.1
 torch==2.9.1
 tqdm==4.67.1
@@ -141,10 +82,11 @@ transformers==4.57.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
-uritemplate==4.2.0
 urllib3==2.6.1
 uvicorn==0.38.0
 watchfiles==1.1.1
 websockets==15.0.1
-wheel==0.45.1
-yarl==1.22.0
+openai-whisper==20231117
+rapidfuzz==3.9.7
+supabase>=2.0.0
+stripe==14.1.0
